web/css/source/_brentmill.less
/* ... */
// PLP
.page-products .product-item-actions { float: right; }
.page-products .product-item-name, .product.name a  { font-weight: 700 !important; font-size: 18px; width: 80%; float:left; display: block;}
.page-products .product-item .price-box { float: right;}
.page-products .product-item .price {font-size: 18px;}
.page-products .product-item-actions { clear: both;}
.page-products .product-item-description { float: none; width: 75%;}
.filter-options-title { word-break: break-word; }
.products-list .product-image-wrapper .product-image-photo { margin-top: -40px; }

// PDP
@gallery-thumb-border-color-active: @color-red; //not working?
@gallery-dot-color-active: @color-red; //not working?
.product.data.items > .item.content, .product.data.items > .item.title.active > .switch, .product.data.items > .item.title { background-color: @color-white; }
.product.data.items > .item.title > .switch { background-color: @color-walls}
//  Buttons
@button__color: @color-gray20;
@button__background: @color-gray80;
@button__border: 1px solid @border-color__base;

//  Primary button
@button-primary__background: @color-red;
@button-primary__border: 1px solid darken(@color-red, 15%);
@button-primary__color: @color-white;
@button-primary__hover__background: darken(@color-red, 5%);
@button-primary__hover__border: 1px solid @color-pu2;
@button-primary__hover__color: @color-white;

//  Navigation
@navigation__background: @color-white;
@navigation-level0-item__color: @color-ceiling;
@navigation-level0-item__active__border-color: @color-walls;

@navigation-desktop__background: @color-floor;
@navigation-desktop-level0-item__color: @color-ceiling;
@navigation-desktop-level0-item__hover__color: @color-walls;
@navigation-desktop-level0-item__active__color: @color-walls;
@navigation-desktop-level0-item__active__border-color: @color-walls;

//@submenu-item__color: @color-pu2;
@submenu-item__background: @color-white;
@submenu-item__active__border-color: @color-walls;

@submenu-desktop-item__color: @color-pu2;
@submenu-desktop-item__hover__color: @color-floor;
@submenu-desktop-item__active__border-color: @color-walls;

//  Tabs
@tab-control__background-color: @color-walls;

//  Forms
@form-element-input__background: @color-gray89;
@form-element-input-placeholder__color: @color-gray60;

//  Header
@header-panel__background-color: @color-pu2;
@header__background-color: @color-white;

@minicart-icons-color: @color-white;
@minicart-icons-hover-color: darken(@color-white, 5%);
.minicart-wrapper .action.showcart .counter.qty {
  background: @color-red;
}
.minicart-wrapper .block-minicart {
  color: @color-floor;
}
.minicart-items .action.edit:before, .minicart-items .action.delete:before { color:@color-floor; font-size:20px;}
.cart.table-wrapper .actions-toolbar > .action-edit:before, .cart.table-wrapper .actions-toolbar > .action-delete:before {color:@color-floor;}

.cart.table-wrapper .actions-toolbar > .action-edit:before, .minicart-items .action.edit:before { content: '\e606'; font-size: 26px; }
.cart.table-wrapper .actions-toolbar > .action-delete:before, .minicart-items .action.delete:before { font-size: 26px; }

@icon-search-color: @color-pu2;

.block-search {
    top: 42px;
    right: 20%;
    width:55%;
    max-width: 400px;
  }

div.minicart-wrapper { margin-top: -5px; }
.nav-promo {
    display: inline-block;;
    float: right;
    background-color: @color-pu2;
    padding:16px;
    margin: 0 10px 0 10px;
  }

// Cart
.opc-wrapper {
  width: 66.66666667% !important;
}
.paypal-review-discount .block > .title strong, .cart-discount .block > .title strong {
  color: @color-pu2;
}
.cart-summary {
  background-color: @color-walls;
}
.opc-progress-bar-item._active:before, .opc-progress-bar-item._active > span:before { background-color: @color-floor;}
.opc-wrapper .shipping-address-item.selected-item { border-color: @color-floor; }
.opc-wrapper .shipping-address-item.selected-item:after { background: @color-floor; }

// My Account
.block-collapsible-nav .content { background-color: @color-walls;}
.block-collapsible-nav .item.current > strong { border-color: @color-red;}
.block-collapsible-nav .item.current a { border-color: @color-red; }
.table tfoot, .order-details-items tfoot td { background: @color-walls;}


// Footer
@footer__background-color: @color-floor;
@footer-links-color: @color-ceiling;
@footer-links-color-hover: darken(@color-ceiling, 15%);
@copyright__background-color: darken(@color-floor, 5%);

// Quick order Dropdown
.dropbtn {
    background-color: @color-floor;
    color: @color-ceiling;
    padding: 19px 18px 18px 18px;
    margin-right: 12px;
    margin-top: -1px;
    border: 0px;
    //font-size: 16px;
}
button.dropbtn {
  border: none;
  border-radius: 0px;
}
.dropdown {
    position: relative;
    display: inline-block;
    border:none;
}
.dropdown-content {
    display: none;
    position: absolute;
    right: 0;
    background-color: @color-white;
    min-width: 320px;
    padding:20px;
    margin-right: 12px;
    margin-top: -3px;
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.15);
}
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
.dropdown-content a:hover {background-color: #f1f1f1}
.dropdown:hover .dropdown-content {
    display: block;
}
.dropdown:hover .dropbtn {
    background-color: @color-white;
    border-bottom: 0px;
    border-radius: 8px 8px 0px 0px;
    border-top: 0px solid @color-floor;
    border-left:0px;
    border-right:0px;
    border-bottom:0px;
}
/* ... */

